# pkt

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_SUMMARY.md  EXAMPLES.md  LICENSE  Makefile  QUICKSTART.md  README.md  RELEASE_GUIDE.md  RELEASE_NOTES.md  TESTING.md  TEST_RESULTS.md  TRIGGER_BUILDS.md  VERIFICATION.md  build.sh  demo.sh  exc  go.mod  go.sum  install.sh  main.go  setup_db.sh  test-yourself.sh  verify.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  ci.yml  release.yml
cmd/: add.go  ask.go  chat.go  clean.go  clone.go  config.go  create.go  debug.go  delete.go  deps.go  exec.go  generate.go  info.go  init.go  install.go  list.go  open.go  outdated.go  pm.go  remove.go  rename.go  root.go  run.go  search.go  start.go  stats.go  status.go  update.go
include/: CLI.hpp  DependencyManager.hpp  GlobalRegistry.hpp  GlobalStore.hpp  ProjectManager.hpp  RegistryClient.hpp  Utils.hpp
internal/ai/: agent.go  client.go
internal/config/: config.go  config_test.go
internal/db/: db.go  dependencies.go  dependencies_test.go  projects.go  projects_test.go  schema.sql
internal/lang/: go.go  javascript.go  lang.go  python.go  rust.go
internal/pm/: bun.go  cargo.go  golang.go  npm.go  pm.go  pm_test.go  pnpm.go  python.go
internal/utils/: fs.go  manifest.go  packagejson.go  packagejson_test.go  resolver.go  resolver_test.go
src/: CLI.cpp  DependencyManager.cpp  GlobalRegistry.cpp  GlobalStore.cpp  ProjectManager.cpp  RegistryClient.cpp  Utils.cpp  main.cpp
test-app/: .pkg.deps  .pkg.info  server.js
test-demo/: .pkg.deps  .pkg.info
tests/: CMakeLists.txt  test_basic.cpp
workspace/new-project/: package.json
